[gd_scene load_steps=7 format=2]

[ext_resource path="res://Textures/GD Test Icon/icon.png" type="Texture" id=2]
[ext_resource path="res://Map Resources/Enemies/EnemyBase.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 1, 0.25 )

[sub_resource type="CylinderShape" id=2]
radius = 5.0

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.5, 1, 0.25 )

[node name="EnemyBase" type="KinematicBody" groups=[
"Enemy",
]]
script = ExtResource( 3 )
anim_path = NodePath("Sprites")
eyes_path = NodePath("Eyes")
hitbox_path = NodePath("Hitbox")

[node name="Sprites" type="AnimatedSprite3D" parent="."]
frames = SubResource( 4 )

[node name="Hitbox" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="DetectionController" type="Area" parent="."]

[node name="DetectionArea" type="CollisionShape" parent="DetectionController"]
shape = SubResource( 2 )

[node name="Eyes" type="Spatial" parent="."]

[node name="AttackRangeController" type="Area" parent="."]

[node name="AttackRange" type="CollisionShape" parent="AttackRangeController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25 )
shape = SubResource( 5 )
[connection signal="body_entered" from="DetectionController" to="." method="_on_DetectionController_body_entered"]
[connection signal="body_exited" from="DetectionController" to="." method="_on_DetectionController_body_exited"]
[connection signal="body_entered" from="AttackRangeController" to="." method="_on_AttackRangeController_body_entered"]
[connection signal="body_exited" from="AttackRangeController" to="." method="_on_AttackRangeController_body_exited"]
